v0.0.21:
 + Update some translations
 + Show progress in location when statusbar is hidden
 + Alt + Enter in location should issue a new tab
 + Warn at configure time if GVfs is not installed
 + Remove GVfs code that could caused huge problems
 + Update wad to 1.4.4 to fix building on some systems

v0.0.20:
 + Single instance support using Unique
 + Make it clear that WAF is preferred
 + Provide an 'extension' icon
 + Load user styles from ~/.local/share/midori/styles
 + Use Ctrl+Shift+T for Undo Close Tab
 + Add "open-tabs-next-to-current" preference
 + Use rsvg-convert instead of imagemagick's convert
 + @name in the meta data of userscripts is recognized
 + Remove "small-toolbar" preference

v0.0.19:
 + Improved Greasemonkey compatibility
 + Improve multiple window support
 + Use WAF buildscripts, still keeping autotools
 + Install and use Midori logo
 + Support zooming and printing
 + Enhance Gjs functionality
 + Refactor in some places, particularly Web Search
 + Implement favicons and source view with GIO
 + Introduce new fancy location entry
 + Detect and show news feeds on web sites
 + Save the session as needed, not only on quit
 + Reintroduce Download Manager preference

v0.0.18:
 + First attempt at userscripts and extensions.
 + Show hidden location/ web search temporarily when needed.
 + Turn prefs into MidoriPreferences
 + Fix background tabs, strings and new tab focus.
 + Switch configuration to MidoriWebSettings.
 + Remove 'External programs' logic
 + Append the closed tabs items as a proper submenu.
 + The location is empty and focused by default
 + Implement proper menu positioning.
 + Implement the Console panel for script messages.
 + Implement localization via Gettext.
 + Initial refactoring work, regressions expected
 + Build fix: Webkit's header and pkgconfig name have changed.
 + Implement Fullscreen mode

v0.0.17:
 + Add a preference to choose a user stylesheet.
 + Implement a few preferences with new settings API in WebKit