@@ -1,3 +1,5 @@
+This file is licensed under the terms of the expat license, see the file EXPAT.
+
 +++ Installing Midori +++
 
 Building and installing Midori is straightforward.
