@@ -1,3 +1,5 @@
+This file is licensed under the terms of the expat license, see the file EXPAT.
+
 Midori is a lightweight web browser.
 
 * Full integration with GTK+2.
