@@ -1,3 +1,5 @@
+This file is licensed under the terms of the expat license, see the file EXPAT.
+
 TODO:
  . Revamp bookmarks UI, including creating of bookmark folders
  . Use an update timeout in KatzePropertyProxy instead of only focus-out
